mobile menu z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -319,13 +319,13 @@ header a:link, header a:visited {
     height: 100%;
     opacity: 0;
     pointer-events: none;
-    z-index: 1;
+    z-index: 3;
     background: black;
     transition: .3s
   }
 
   .no-scroll-menu-open-hammy #hamnav {
-    z-index: 2;
+    z-index: 4;
   }
 
   /* Show Hamburger Icon */
